# drone-arm

./: .gitignore  CMakeLists.txt
inc/: Context.h  GyroAngleFilter.h  GyroSimpleFilter.h  HandlerHelper.h  I2C.h  IMU.h  Motor.h  PWM.h  PWMInput.h  PWMinput.h  SimpleGyroFilter.h  SimplePID.h  Sticks.cpp  Timer.h  USART.h  USARTHelper.h  utils.h
inc/IOwrapper/: IMU.h  Motor.h  Motors.h  StickInputs.h  Sticks.h
inc/PID/: AnglePID.h  RatePID.h  common.h
inc/filter/: GyroAngleFilter.h  GyroRateFilter.h
inc/protocol/: I2C.h  PWM.h  PWMInput.h  USART.h
inc/util/: Context.h  HandlerHelper.h  TIMUtils.h  Timer.h  USARTHelper.h  misc.h
src/: GyroAngleFilter.cpp  GyroSimpleFilter.cpp  HandlerHelper.cpp  I2C.cpp  IMU.cpp  Motor.cpp  PWM.cpp  PWMInput.cpp  PWMinput.cpp  SimpleGyroFilter.cpp  SimplePID.cpp  Timer.cpp  USART.cpp  USARTHelper.cpp  main.cpp  utils.cpp
src/IOwrapper/: IMU.cpp  Motor.cpp  Motors.cpp  StickInputs.cpp  Sticks.cpp
src/PID/: AnglePID.cpp  RatePID.cpp
src/filter/: ComplementaryFilter.cpp  ComplementaryFilter.h  GyroAngleFilter.cpp  GyroRateFilter.cpp
src/protocol/: I2C.cpp  PWM.cpp  PWMInput.cpp  USART.cpp
src/util/: Context.cpp  HandlerHelper.cpp  Timer.cpp  USARTHelper.cpp  misc.cpp
utils/: capture_uart.py
